tests/multiubuntu/test-cases/TC_15/TC_15_egress_matchLables_toPorts_toHttps_rule_selector_aggregation.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autopol-egress-xvlbzgbaicmrajw
  namespace: multiubuntu
spec:
  endpointSelector:
    matchLabels:
      group: group-2
  egress:
  - toEndpoints:
    - matchLabels:
        container: ubuntu-2
        group: group-1
        k8s:io.kubernetes.pod.namespace: multiubuntu
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
      rules:
        http:
        - method: GET
          path: /test1
---
